// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input.svelte > should render input for type "checkbox" 1`] = `
<input
  hidden="true"
  type="checkbox"
/>
`;

exports[`Input.svelte > should render input for type "checkbox" as readonly 1`] = `
<input
  hidden="true"
  readonly="true"
  type="checkbox"
/>
`;

exports[`Input.svelte > should render input for type "checkbox" as required 1`] = `
<input
  hidden="true"
  readonly="true"
  type="checkbox"
/>
`;

exports[`Input.svelte > should render input for type "checkbox" with custom props 1`] = `
<input
  hidden="true"
  type="checkbox"
/>
`;

exports[`Input.svelte > should render input for type "color" 1`] = `
<input
  type="color"
/>
`;

exports[`Input.svelte > should render input for type "color" as readonly 1`] = `
<input
  readonly="true"
  type="color"
/>
`;

exports[`Input.svelte > should render input for type "color" as required 1`] = `
<input
  readonly="true"
  type="color"
/>
`;

exports[`Input.svelte > should render input for type "date" 1`] = `
<input
  type="date"
/>
`;

exports[`Input.svelte > should render input for type "date" as readonly 1`] = `
<input
  readonly="true"
  type="date"
/>
`;

exports[`Input.svelte > should render input for type "date" as required 1`] = `
<input
  readonly="true"
  type="date"
/>
`;

exports[`Input.svelte > should render input for type "datetime" 1`] = `
<input
  type="datetime-local"
/>
`;

exports[`Input.svelte > should render input for type "datetime" as readonly 1`] = `
<input
  readonly="true"
  type="datetime-local"
/>
`;

exports[`Input.svelte > should render input for type "datetime" as required 1`] = `
<input
  readonly="true"
  type="datetime-local"
/>
`;

exports[`Input.svelte > should render input for type "email" 1`] = `
<input
  type="email"
/>
`;

exports[`Input.svelte > should render input for type "email" as readonly 1`] = `
<input
  readonly="true"
  type="email"
/>
`;

exports[`Input.svelte > should render input for type "email" as required 1`] = `
<input
  readonly="true"
  type="email"
/>
`;

exports[`Input.svelte > should render input for type "file" 1`] = `
<input
  type="file"
/>
`;

exports[`Input.svelte > should render input for type "file" as readonly 1`] = `
<input
  readonly="true"
  type="file"
/>
`;

exports[`Input.svelte > should render input for type "file" as required 1`] = `
<input
  readonly="true"
  type="file"
/>
`;

exports[`Input.svelte > should render input for type "integer" 1`] = `
<input
  type="number"
/>
`;

exports[`Input.svelte > should render input for type "integer" as readonly 1`] = `
<input
  readonly="true"
  type="number"
/>
`;

exports[`Input.svelte > should render input for type "integer" as required 1`] = `
<input
  readonly="true"
  type="number"
/>
`;

exports[`Input.svelte > should render input for type "month" 1`] = `
<input
  type="month"
/>
`;

exports[`Input.svelte > should render input for type "month" as readonly 1`] = `
<input
  readonly="true"
  type="month"
/>
`;

exports[`Input.svelte > should render input for type "month" as required 1`] = `
<input
  readonly="true"
  type="month"
/>
`;

exports[`Input.svelte > should render input for type "number" 1`] = `
<input
  type="number"
/>
`;

exports[`Input.svelte > should render input for type "number" as readonly 1`] = `
<input
  readonly="true"
  type="number"
/>
`;

exports[`Input.svelte > should render input for type "number" as required 1`] = `
<input
  readonly="true"
  type="number"
/>
`;

exports[`Input.svelte > should render input for type "number" with custom props 1`] = `
<input
  max="10"
  min="3"
  type="number"
/>
`;

exports[`Input.svelte > should render input for type "password" 1`] = `
<input
  type="password"
/>
`;

exports[`Input.svelte > should render input for type "password" as readonly 1`] = `
<input
  readonly="true"
  type="password"
/>
`;

exports[`Input.svelte > should render input for type "password" as required 1`] = `
<input
  readonly="true"
  type="password"
/>
`;

exports[`Input.svelte > should render input for type "radio" 1`] = `
<radio-group
  class=""
/>
`;

exports[`Input.svelte > should render input for type "radio" as readonly 1`] = `
<radio-group
  class="disabled"
/>
`;

exports[`Input.svelte > should render input for type "radio" as required 1`] = `
<radio-group
  class="disabled"
/>
`;

exports[`Input.svelte > should render input for type "radio" with custom props 1`] = `
<radio-group
  class=""
>
  <label
    class="flex flex-row-reverse items-center gap-2"
  >
    <input
      type="radio"
      value="foo"
    />
     
    <p>
      foo
    </p>
     
  </label>
  <label
    class="flex flex-row-reverse items-center gap-2"
  >
    <input
      type="radio"
      value="bar"
    />
     
    <p>
      bar
    </p>
     
  </label>
  <label
    class="flex flex-row-reverse items-center gap-2"
  >
    <input
      type="radio"
      value="baz"
    />
     
    <p>
      baz
    </p>
     
  </label>
</radio-group>
`;

exports[`Input.svelte > should render input for type "radio" with custom props 2`] = `
<radio-group
  class=""
>
  <label
    class="flex flex-row items-center gap-2"
  >
    <input
      type="radio"
      value="foo"
    />
     
    <p>
      foo
    </p>
     
  </label>
  <label
    class="flex flex-row items-center gap-2"
  >
    <input
      type="radio"
      value="bar"
    />
     
    <p>
      bar
    </p>
     
  </label>
  <label
    class="flex flex-row items-center gap-2"
  >
    <input
      type="radio"
      value="baz"
    />
     
    <p>
      baz
    </p>
     
  </label>
</radio-group>
`;

exports[`Input.svelte > should render input for type "radio" with custom props 3`] = `
<radio-group
  class=""
>
  <label
    class="flex flex-row items-center gap-2"
  >
    <input
      type="radio"
      value="1"
    />
     
    <p>
      foo
    </p>
     
  </label>
  <label
    class="flex flex-row items-center gap-2"
  >
    <input
      type="radio"
      value="2"
    />
     
    <p>
      bar
    </p>
     
  </label>
  <label
    class="flex flex-row items-center gap-2"
  >
    <input
      type="radio"
      value="3"
    />
     
    <p>
      baz
    </p>
     
  </label>
</radio-group>
`;

exports[`Input.svelte > should render input for type "range" 1`] = `
<input
  type="range"
/>
`;

exports[`Input.svelte > should render input for type "range" as readonly 1`] = `
<input
  readonly="true"
  type="range"
/>
`;

exports[`Input.svelte > should render input for type "range" as required 1`] = `
<input
  readonly="true"
  type="range"
/>
`;

exports[`Input.svelte > should render input for type "select" 1`] = `<select />`;

exports[`Input.svelte > should render input for type "select" as readonly 1`] = `
<select
  readonly="true"
/>
`;

exports[`Input.svelte > should render input for type "select" as required 1`] = `
<select
  readonly="true"
/>
`;

exports[`Input.svelte > should render input for type "string" 1`] = `
<input
  type="text"
/>
`;

exports[`Input.svelte > should render input for type "string" as readonly 1`] = `
<input
  readonly="true"
  type="text"
/>
`;

exports[`Input.svelte > should render input for type "string" as required 1`] = `
<input
  readonly="true"
  type="text"
/>
`;

exports[`Input.svelte > should render input for type "tel" 1`] = `
<input
  type="url"
/>
`;

exports[`Input.svelte > should render input for type "tel" as readonly 1`] = `
<input
  readonly="true"
  type="url"
/>
`;

exports[`Input.svelte > should render input for type "tel" as required 1`] = `
<input
  readonly="true"
  type="url"
/>
`;

exports[`Input.svelte > should render input for type "text" 1`] = `
<input
  type="text"
/>
`;

exports[`Input.svelte > should render input for type "text" as readonly 1`] = `
<input
  readonly="true"
  type="text"
/>
`;

exports[`Input.svelte > should render input for type "text" as required 1`] = `
<input
  readonly="true"
  type="text"
/>
`;

exports[`Input.svelte > should render input for type "text" with custom props 1`] = `
<input
  maxlength="10"
  minlength="3"
  type="text"
/>
`;

exports[`Input.svelte > should render input for type "textarea" 1`] = `
<textarea
  type="week"
/>
`;

exports[`Input.svelte > should render input for type "textarea" as readonly 1`] = `
<textarea
  readonly="true"
  type="week"
/>
`;

exports[`Input.svelte > should render input for type "textarea" as required 1`] = `
<textarea
  readonly="true"
  type="week"
/>
`;

exports[`Input.svelte > should render input for type "time" 1`] = `
<input
  type="time"
/>
`;

exports[`Input.svelte > should render input for type "time" as readonly 1`] = `
<input
  readonly="true"
  type="time"
/>
`;

exports[`Input.svelte > should render input for type "time" as required 1`] = `
<input
  readonly="true"
  type="time"
/>
`;

exports[`Input.svelte > should render input for type "url" 1`] = `
<input
  type="url"
/>
`;

exports[`Input.svelte > should render input for type "url" as readonly 1`] = `
<input
  readonly="true"
  type="url"
/>
`;

exports[`Input.svelte > should render input for type "url" as required 1`] = `
<input
  readonly="true"
  type="url"
/>
`;

exports[`Input.svelte > should render input for type "week" 1`] = `
<input
  type="week"
/>
`;

exports[`Input.svelte > should render input for type "week" as readonly 1`] = `
<input
  readonly="true"
  type="week"
/>
`;

exports[`Input.svelte > should render input for type "week" as required 1`] = `
<input
  readonly="true"
  type="week"
/>
`;
